# st7_wrap

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements_dev.txt  setup.cfg
examples/: change_plate_property.py  handle_exceptions.py  model_window.py  new_model.py  solve_and_results.py
src/st7_wrap/: __init__.py  _constants_generate.py  _exceptions_generate.py  arrays.py  const.py  exc.py  st7.py
src/st7_wrap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/st7_wrap/examples/: new_model.py
