[metadata]
name = st7_wrap
version = 0.0.1
author = Tom Wilson
author_email = file: author_email.txt
description = Wrapper for the Strand7 API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tom-dq/st7_wrap
project_urls =
    Bug Tracker = https://github.com/tom-dq/st7_wrap/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src