[metadata]
name = st7_wrap
version = 0.0.1
author = Tom Wilson
author_email = tom.wilson.66+st7_wrap@gmail.com
description = Wrapper for the Strand7 API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tom-dq/st7_wrap
project_urls =
    Bug Tracker = https://github.com/tom-dq/st7_wrap/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src